# qse-pkg

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  RESEARCH_LOG.md  ROLE_ENGINEER.md  ROLE_RESEARCH.md  TODOS.md  docker-compose.yml  qse-gate.toml  requirements.txt  setup.py
.claude/: settings.json
.qse/: ratchet_baseline.json
_obsolete/: README.md
artifacts/: DOCUMENT_MAP.md  agq_v3_definition.json  correlation_matrix_v1.json  e10_gt_results.json  e10b_within_repo_results.json  e11_behavioral_corr.json  e11_behavioral_raw.json  e11_breakthrough_findings.json  e11_cross_repo_results.json  e11_final_summary.json  e11_within_repo_results.json  e12_blind_pilot_results.json  e12b_loocv_results.json  e13_fresh_pilot_results.json  e13b_rank_refinement.json  e13c_retest_results.json  e13d_qse_track_pilot.json  e13e_panel_after_all_iterations.json  e13e_panel_after_refactoring.json  e13e_panel_baseline.json  e13e_panel_final.json  e13e_panel_final_state.json  e13e_shopizer_pilot.json  e13f_commons_pilot.json  e13g_cross_pilot_analysis.md  e13g_newbee_pilot.json  e8_lfr_results.json  e8_s_sensitivity_results.json  e9_pilot_results.json  e9b_iterative_results.json  e9b_pilot_plan.json  grant_consolidated_pl.md  grant_preview_pl.md  grant_wp_milestones.md  gt_java_expanded.json  gt_java_final.json  gt_java_final_fixed.json  (+26 more)
qse-core/: Cargo.toml
qse-core/src/: lib.rs
qse-core/src/graph/: mod.rs
qse-core/src/metrics/: acyclicity.rs  cohesion.rs  mod.rs  modularity.rs  stability.rs
qse-core/src/scanner/: mod.rs  universal.rs
(+448 files in other folders)
