[package]
name = "qse-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
